# AEngine

./: .gitignore
Box2D/Box2D/Common/: b2Settings.h
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: particle.frag  particle.vert  shader.frag  shader.vert
app/src/main/cpp/: AComponent.cpp  AComponent.h  ARenderer.cpp  ARenderer.h  BodyComponent.cpp  BodyComponent.h  CarSteeringComponent.cpp  CarSteeringComponent.h  CollisionContactListenerSingleton.cpp  CollisionContactListenerSingleton.h  FactoryTemplate.h  FixtureComponent.cpp  FixtureComponent.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  ParticleRendererSingleton.cpp  ParticleRendererSingleton.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  PlayerComponent.cpp  PlayerComponent.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SoundControllerSingleton.cpp  SoundControllerSingleton.h  SpriteComponent.cpp  SpriteComponent.h  SpriteRendererSingleton.cpp  SpriteRendererSingleton.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  TileMap.cpp  TileMap.h  Util.h  (+1 more)
app/src/main/java/local/fhs/mygame/: GameRenderer.java  Loader.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
